--- a/course-info.yaml
+++ b/course-info.yaml
@@ -1,15 +1,18 @@
 type: marketplace
 title: Introduction to Python
-language: English
+language: Ukrainian
 summary: |-
-  <p>This is an introductory Python course by JetBrains Academy. The presented materials are based on the official <a href="https://docs.python.org/3/">Python Documentation</a>. The target audience are the people with little or no experience in programming who would like to start learning Python.</p>
-  <p>In this course, you will learn about the basics, such as variables and operations with them, strings and other data structures, boolean operators, conditions, control flow, and so on. You will try implementing loops, functions, and classes, as well as using parts of your code as imported modules, and working with text files.</p>
-  <p>Have fun and good luck!</p>
-  <p>P.S. Want to contribute? Feel free to send a pull request to this course’s <a href="https://github.com/jetbrains-academy/introduction_to_python">git repo</a>.</p>
+  <p>Цей курс розроблений для дітей та початківців.</p>
+  <ul>
+  <li>Мовою цього курсу обрана українська, знання англійської допоможе.</li>
+  <li>Цей курс допоможе тим, хто має стійкий інтерес до навчання.</li>
+  <li>Курс покриє основні складові мови програмування.</li>
+  <li>Він містить вправи з програмування Python, які дозволяють практикувати отримані знання.</li>
+  <li>Курс є втіленням досвіду викладання дітям від 10 років.</li>
 vendor:
-  name: JetBrains
-  email: support@jetbrains.com
-  url: https://www.jetbrains.com/
+  name: Kiril Che
+  email: https://github.com/kirilche
+  url: https://github.com/kirilche/vstup_do_python
 programming_language: Python
 environment: unittest
 content:
